--- a/static/index.html
+++ b/static/index.html
@@ -47,6 +47,8 @@
           : Consistent validator that works across tabs and accordions
         </li>
       </ul>
+
+      <p>For more information, <a href="https://github.com/lekoala/bs-companion">head to the repository</a></p>
     </div>
   </body>
 </html>
