--- a/static/index.html
+++ b/static/index.html
@@ -10,6 +10,14 @@
     <meta name="theme-color" content="#111111" media="(prefers-color-scheme: light)" />
     <meta name="theme-color" content="#eeeeee" media="(prefers-color-scheme: dark)" />
 
+    <script>
+      // You can tweak settings by changing global variable
+      window.LastIcon = {
+        defaultSet: "bootstrap",
+      };
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/last-icon@1.3.3/last-icon.min.js"></script>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/js/bootstrap.bundle.min.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js" type="module"></script>
@@ -35,6 +43,10 @@
           : Improved tabs, that collapse down to a dropdown and with linkable tabs
         </li>
         <li>
+          <a href="bs-toggle.html">BS Toggle</a>
+          : Self initializing popovers and tabs
+        </li>
+        <li>
           <a href="toaster.html">Toaster</a>
           : Generate beautiful toast message without markup
         </li>
@@ -47,8 +59,21 @@
           : Consistent validator that works across tabs and accordions
         </li>
       </ul>
-
-      <p>For more information, <a href="https://github.com/lekoala/bs-companion">head to the repository</a></p>
+      <p>
+        For more information,
+        <a href="https://github.com/lekoala/bs-companion">head to the repository</a>
+      </p>
+      <h2>Friendly projects</h2>
+      <ul>
+        <li>
+          <a href="sortable-list.html">Sortable lists</a>
+          : With no code :-)
+        </li>
+        <li>
+          <a href="last-icon.html">BS Icons</a>
+          : Refined
+        </li>
+      </ul>
     </div>
   </body>
 </html>
