--- a/static/bs-tabs.html
+++ b/static/bs-tabs.html
@@ -48,6 +48,7 @@
         console.log("defined");
       });
     </script>
+
   </head>
 
   <body>
@@ -69,76 +70,78 @@
       </p>
 
       <div class="demo" style="min-height: 400px">
-        <bs-tabs responsive>
-          <ul class="nav nav-tabs" id="myTab" role="tablist">
-            <li class="nav-item" role="presentation">
-              <button
-                class="nav-link active"
-                id="home-tab"
-                data-bs-toggle="tab"
-                data-bs-target="#home"
-                type="button"
-                role="tab"
-                aria-controls="home"
-                aria-selected="true">
-                Home
-              </button>
-            </li>
-            <li class="nav-item" role="presentation">
-              <button
-                class="nav-link"
-                id="profile-tab"
-                data-bs-toggle="tab"
-                data-bs-target="#profile"
-                type="button"
-                role="tab"
-                aria-controls="profile"
-                aria-selected="false">
-                Profile
-              </button>
-            </li>
-            <li class="nav-item" role="presentation">
-              <button
-                class="nav-link"
-                id="messages-tab"
-                data-bs-toggle="tab"
-                data-bs-target="#messages"
-                type="button"
-                role="tab"
-                aria-controls="messages"
-                aria-selected="false">
-                Messages
-              </button>
-            </li>
-            <li class="nav-item" role="presentation">
-              <button
-                class="nav-link disabled"
-                id="settings-tab"
-                data-bs-toggle="tab"
-                data-bs-target="#settings"
-                type="button"
-                role="tab"
-                aria-controls="settings"
-                aria-selected="false"
-                disabled>
-                Settings
-              </button>
-            </li>
-            <li class="nav-item" role="presentation">
-              <button
-                class="nav-link"
-                id="longtab-tab"
-                data-bs-toggle="tab"
-                data-bs-target="#longtab"
-                type="button"
-                role="tab"
-                aria-controls="longtab"
-                aria-selected="false">
-                A very long tab name
-              </button>
-            </li>
-          </ul>
-        </bs-tabs>
+        <header>
+          <bs-tabs responsive end>
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+              <li class="nav-item" role="presentation">
+                <button
+                  class="nav-link active"
+                  id="home-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#home"
+                  type="button"
+                  role="tab"
+                  aria-controls="home"
+                  aria-selected="true">
+                  Home
+                </button>
+              </li>
+              <li class="nav-item" role="presentation">
+                <button
+                  class="nav-link"
+                  id="profile-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#profile"
+                  type="button"
+                  role="tab"
+                  aria-controls="profile"
+                  aria-selected="false">
+                  Profile
+                </button>
+              </li>
+              <li class="nav-item" role="presentation">
+                <button
+                  class="nav-link"
+                  id="messages-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#messages"
+                  type="button"
+                  role="tab"
+                  aria-controls="messages"
+                  aria-selected="false">
+                  Messages
+                </button>
+              </li>
+              <li class="nav-item" role="presentation">
+                <button
+                  class="nav-link disabled"
+                  id="settings-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#settings"
+                  type="button"
+                  role="tab"
+                  aria-controls="settings"
+                  aria-selected="false"
+                  disabled>
+                  Settings
+                </button>
+              </li>
+              <li class="nav-item" role="presentation">
+                <button
+                  class="nav-link"
+                  id="longtab-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#longtab"
+                  type="button"
+                  role="tab"
+                  aria-controls="longtab"
+                  aria-selected="false">
+                  A very long tab name
+                </button>
+              </li>
+            </ul>
+          </bs-tabs>
+        </header>
 
         <div class="tab-content">
           <div class="tab-pane active" id="home" role="tabpanel" aria-labelledby="home-tab" tabindex="0">home tab</div>
