--- a/static/bs-tabs.html
+++ b/static/bs-tabs.html
@@ -71,8 +71,8 @@
 
       <div class="demo" style="min-height: 400px">
         <header>
-          <bs-tabs responsive end>
-            <ul class="nav nav-tabs" id="myTab" role="tablist">
+          <bs-tabs responsive>
+            <ul class="nav nav-tabs" id="myTab" role="tablist" style="width:100%">
               <li class="nav-item" role="presentation">
                 <button
                   class="nav-link active"
