--- a/static/bs-toggle.html
+++ b/static/bs-toggle.html
@@ -31,6 +31,35 @@
       .custom-tooltip {
         --bs-tooltip-bg: var(--bs-primary);
       }
+
+      .badge {
+        --tooltip-enable: false;
+      }
+
+      .badge-tooltip .badge {
+        text-indent: -9999px;
+        display: block;
+        padding: 0;
+        width: 6px;
+        height: 6px;
+        position: absolute;
+        top: 6px;
+        left: 6px;
+        --tooltip-enable: true;
+      }
+
+      bs-toggle svg {
+        display: none;
+      }
+      .badge-icon bs-toggle svg {
+        display: inline-block;
+      }
+      .badge-icon .badge > span {
+        display: none;
+      }
+      .badge-icon .badge {
+        --tooltip-enable: true;
+      }
     </style>
   </head>
 
@@ -77,6 +106,44 @@
       <bs-toggle data-toggle="popover" data-title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?">
         <button type="button" class="btn btn-lg btn-danger">Click to toggle popover</button>
       </bs-toggle>
+
+      <hr />
+      <h3 class="mt-3">Badge or tooltip</h3>
+
+      <p>
+        Node content can be used instead of title attribute if its not there. Also, add
+        <code>mobile</code>
+        attribute for tooltips that replace content when you need to save space. Simply set the <code>--tooltip-enable</code> to true in css for the collapsed view.
+      </p>
+      <button id="toggleClass" onclick="document.getElementById('test-nav-item').classList.toggle('badge-tooltip')">Toggle badge-tooltip class</button>
+      <button id="toggleClass" onclick="document.getElementById('test-icon-item').classList.toggle('badge-icon')">Toggle badge-icon class</button>
+
+      <ul class="list-group">
+        <li class="list-group-item disabled" aria-disabled="true">A disabled item (it doesn't trigger tooltip)
+          <bs-toggle mobile><span class="badge bg-primary rounded-pill">0</span></bs-toggle>
+        </li>
+        <li class="list-group-item badge-tooltip" id="test-nav-item">
+          A second item
+          <bs-toggle mobile><span class="badge bg-primary rounded-pill">2000+</span></bs-toggle>
+        </li>
+        <li class="list-group-item badge-icon" id="test-icon-item">
+          A third item
+          <bs-toggle mobile>
+            <span class="badge bg-primary rounded-pill">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+                <path
+                  d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"></path>
+              </svg>
+              <span>2000+</span>
+            </span>
+          </bs-toggle>
+        </li>
+        <li class="list-group-item">A fourth item
+          <bs-toggle mobile><span class="badge bg-primary rounded-pill">0</span></bs-toggle>
+        </li>
+        <li class="list-group-item">And a fifth one</li>
+      </ul>
     </div>
   </body>
 </html>
