remove unecessary css var and update width calc

--- a/static/bs-tabs.html
+++ b/static/bs-tabs.html
@@ -220,8 +220,8 @@
       </p>
 
       <div class="demo" style="min-height: 400px">
-        <bs-tabs linkable>
-          <ul class="nav nav-tabs" id="myTab2" role="tablist">
+        <bs-tabs linkable responsive>
+          <ul class="nav nav-tabs" id="myTab2" role="tablist" style="width: 100%">
             <li class="nav-item" role="presentation">
               <a class="nav-link" id="panel-1-tab" data-bs-toggle="tab" data-bs-target="#panel-1" type="button" role="tab">Panel 1</a>
             </li>
@@ -246,7 +246,7 @@
           <div class="tab-pane fade" id="panel-3" role="tabpanel" aria-labelledby="panel-3-tab" tabindex="0">
             <p>This have linkable nested tabs</p>
             <bs-tabs linkable>
-              <ul class="nav nav-tabs" id="myTab2" role="tablist">
+              <ul class="nav nav-tabs" id="myTab2" role="tablist" style="width: 100%">
                 <li class="nav-item" role="presentation">
                   <a class="nav-link" id="nested-1-tab" data-bs-toggle="tab" data-bs-target="#panel-3__nested-1" type="button" role="tab">Nested 1</a>
                 </li>
