--- a/static/bs-tabs.html
+++ b/static/bs-tabs.html
@@ -167,7 +167,19 @@
                   role="tab"
                   aria-controls="longtab"
                   aria-selected="false">
-                  A very long tab name
+                  A very long tab
+                </button>
+              <li class="nav-item" role="presentation">
+                <button
+                  class="nav-link"
+                  id="foreign-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#foreigntab"
+                  type="button"
+                  role="tab"
+                  aria-controls="foreigntab"
+                  aria-selected="false">
+                  ㅂㅈㄷㄱㅅㅁㄴㅇㄹㅎㅋㅌㅊ ㅂㅈㄷㄱㅅㅁㄴㅇㄹㅎㅋㅌㅊ
                 </button>
               </li>
             </ul>
@@ -180,6 +192,7 @@
           <div class="tab-pane" id="messages" role="tabpanel" aria-labelledby="messages-tab" tabindex="0">messages</div>
           <div class="tab-pane" id="settings" role="tabpanel" aria-labelledby="settings-tab" tabindex="0">settings</div>
           <div class="tab-pane" id="longtab" role="tabpanel" aria-labelledby="longtab-tab" tabindex="0">longtab</div>
+          <div class="tab-pane" id="foreigntab" role="tabpanel" aria-labelledby="foreign-tab" tabindex="0">foreigntab</div>
         </div>
       </div>
 
