--- a/static/toaster.html
+++ b/static/toaster.html
@@ -10,6 +10,8 @@
     <meta name="theme-color" content="#111111" media="(prefers-color-scheme: light)" />
     <meta name="theme-color" content="#eeeeee" media="(prefers-color-scheme: dark)" />
 
+    <script type="module" src="https://cdn.jsdelivr.net/npm/last-icon@2/last-icon.js"></script>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/js/bootstrap.bundle.min.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js" type="module"></script>
@@ -18,10 +20,31 @@
     <link href="./dist/bs-companion.min.css" rel="stylesheet" />
     <script src="./dist/bs-companion.min.js" type="module"></script>
 
+    <style>
+      l-i {
+        --size: 1em;
+        display: inline-flex;
+        width: var(--size);
+        height: var(--size);
+        vertical-align: middle;
+      }
+      l-i svg {
+        display: block;
+        width: 100%;
+        height: 100%;
+      }
+    </style>
+
     <script type="module">
       document.querySelector(".js-toast").addEventListener("click", (ev) => {
+        // You can simply pass a string
+        toaster("Hello world");
+      });
+      document.querySelector(".js-toast-header").addEventListener("click", (ev) => {
         toaster({
           body: "Hello world",
+          header: `<div class="d-flex align-items-center"><l-i name="star" class="me-2"></l-i> My header</div>`,
+          autohide: false,
         });
       });
       document.querySelector(".js-toast-no-hide").addEventListener("click", (ev) => {
@@ -34,51 +57,59 @@
         toaster({
           body: "Hello world from bottom corner (no hide)",
           autohide: false,
-          placement: 'bottom-right'
+          placement: "bottom-right",
         });
       });
       document.querySelector(".error-toast")?.addEventListener("click", (ev) => {
-        Toasts.soft = false;
-        Toasts.gradient = false;
+        Toasts.enableDefault();
         Toasts.error("Hello world");
       });
       document.querySelector(".warning-toast")?.addEventListener("click", (ev) => {
-        Toasts.soft = false;
-        Toasts.gradient = false;
+        Toasts.enableDefault();
         Toasts.warning("Hello world");
       });
       document.querySelector(".success-toast")?.addEventListener("click", (ev) => {
-        Toasts.soft = false;
-        Toasts.gradient = false;
+        Toasts.enableDefault();
         Toasts.success("Hello world");
       });
       document.querySelector(".soft-error-toast")?.addEventListener("click", (ev) => {
-        Toasts.soft = true;
-        Toasts.gradient = false;
+        Toasts.enableSoft();
         Toasts.error("Hello world");
       });
+      document.querySelector(".soft-error-toast-header")?.addEventListener("click", (ev) => {
+        Toasts.enableSoft();
+        Toasts.error("Hello world", {
+          header: `<div class="d-flex align-items-center"><l-i name="alert-circle" class="me-2"></l-i> My header</div>`,
+          autohide: false,
+        });
+      });
       document.querySelector(".soft-warning-toast")?.addEventListener("click", (ev) => {
-        Toasts.soft = true;
-        Toasts.gradient = false;
+        Toasts.enableSoft();
         Toasts.warning("Hello world");
       });
       document.querySelector(".soft-success-toast")?.addEventListener("click", (ev) => {
-        Toasts.soft = true;
-        Toasts.gradient = false;
+        Toasts.enableSoft();
         Toasts.success("Hello world", {
           header: "Success!",
         });
       });
       document.querySelector(".gradient-error-toast")?.addEventListener("click", (ev) => {
-        Toasts.gradient = true;
+        Toasts.enableGradient();
         Toasts.error("Hello world");
       });
+      document.querySelector(".gradient-error-toast-header")?.addEventListener("click", (ev) => {
+        Toasts.enableGradient();
+        Toasts.error("Hello world", {
+          header: `<div class="d-flex align-items-center"><l-i name="alert-circle" class="me-2"></l-i> My header</div>`,
+          autohide: false,
+        });
+      });
       document.querySelector(".gradient-warning-toast")?.addEventListener("click", (ev) => {
-        Toasts.gradient = true;
+        Toasts.enableGradient();
         Toasts.warning("Hello world");
       });
       document.querySelector(".gradient-success-toast")?.addEventListener("click", (ev) => {
-        Toasts.gradient = true;
+        Toasts.enableGradient();
         Toasts.success("Hello world");
       });
     </script>
@@ -91,6 +122,7 @@
       <hr />
       <h2>Toaster</h2>
       <button class="btn btn-primary js-toast">Add toast</button>
+      <button class="btn btn-primary js-toast-header">Add toast with header and icon</button>
       <button class="btn btn-primary js-toast-no-hide">Add toast (no hide)</button>
       <button class="btn btn-primary js-toast-bottom">Add toast to bottom corner (no hide)</button>
       <hr />
@@ -111,6 +143,7 @@
       <button class="btn btn-success soft-success-toast">Success toast</button>
       <button class="btn btn-warning soft-warning-toast">Warning toast</button>
       <button class="btn btn-danger soft-error-toast">Error toast</button>
+      <button class="btn btn-danger soft-error-toast-header">Toast with header</button>
       <hr />
       <p>
         Gradient styles. Toggle with
@@ -120,6 +153,7 @@
       <button class="btn btn-success gradient-success-toast">Success toast</button>
       <button class="btn btn-warning gradient-warning-toast">Warning toast</button>
       <button class="btn btn-danger gradient-error-toast">Error toast</button>
+      <button class="btn btn-danger gradient-error-toast-header">Error toast with header</button>
     </div>
   </body>
 </html>
