--- a/static/toaster.html
+++ b/static/toaster.html
@@ -14,7 +14,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/js/bootstrap.bundle.min.js" type="module"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6/dist/jquery.min.js" type="module"></script>
 
     <link href="./dist/demo.min.css" rel="stylesheet" />
     <link href="./dist/bs-companion.min.css" rel="stylesheet" />
@@ -108,6 +108,12 @@
         Toasts.enableGradient();
         Toasts.warning("Hello world");
       });
+      document.querySelector(".gradient-info-toast")?.addEventListener("click", (ev) => {
+        Toasts.enableGradient();
+        Toasts.info("Hello world", {
+          header: "Some info!",
+        });
+      });
       document.querySelector(".gradient-success-toast")?.addEventListener("click", (ev) => {
         Toasts.enableGradient();
         Toasts.success("Hello world");
@@ -151,6 +157,7 @@
         property.
       </p>
       <button class="btn btn-success gradient-success-toast">Success toast</button>
+      <button class="btn btn-info gradient-info-toast">Info toast</button>
       <button class="btn btn-warning gradient-warning-toast">Warning toast</button>
       <button class="btn btn-danger gradient-error-toast">Error toast</button>
       <button class="btn btn-danger gradient-error-toast-header">Error toast with header</button>
