--- a/static/toaster.html
+++ b/static/toaster.html
@@ -13,8 +13,10 @@
     <script type="module" src="https://cdn.jsdelivr.net/npm/last-icon@2/last-icon.js"></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/js/bootstrap.bundle.min.js" type="module"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/js/bootstrap.bundle.min.js" type="module"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6/dist/jquery.min.js" type="module"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap.native@4.2.0/dist/bootstrap-native.min.js"></script>
 
     <link href="./dist/demo.min.css" rel="stylesheet" />
     <link href="./dist/bs-companion.min.css" rel="stylesheet" />
@@ -42,7 +44,7 @@
       });
       document.querySelector(".js-toast-header").addEventListener("click", (ev) => {
         toaster({
-          body: "Hello world",
+          body: "Hello world <a href='#'>some link here</a>",
           header: `<div class="d-flex align-items-center"><l-i name="star" class="me-2"></l-i> My header</div>`,
           autohide: false,
         });
@@ -78,7 +80,7 @@
       });
       document.querySelector(".soft-error-toast-header")?.addEventListener("click", (ev) => {
         Toasts.enableSoft();
-        Toasts.error("Hello world", {
+        Toasts.error("Hello world <a href='#'>some link here</a>", {
           header: `<div class="d-flex align-items-center"><l-i name="alert-circle" class="me-2"></l-i> My header</div>`,
           autohide: false,
         });
@@ -99,7 +101,7 @@
       });
       document.querySelector(".gradient-error-toast-header")?.addEventListener("click", (ev) => {
         Toasts.enableGradient();
-        Toasts.error("Hello world", {
+        Toasts.error("Hello world <a href='#'>some link here</a>", {
           header: `<div class="d-flex align-items-center"><l-i name="alert-circle" class="me-2"></l-i> My header</div>`,
           autohide: false,
         });
