--- a/static/bs-tabs.html
+++ b/static/bs-tabs.html
@@ -10,12 +10,19 @@
     <meta name="theme-color" content="#111111" media="(prefers-color-scheme: light)" />
     <meta name="theme-color" content="#eeeeee" media="(prefers-color-scheme: dark)" />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/js/bootstrap.bundle.min.js" type="module"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js" type="module"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6/dist/jquery.min.js" type="module"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/last-icon@1.3.3/last-icon.min.js"></script>
-    
+    <script src="https://cdn.jsdelivr.net/npm/last-icon@2/last-icon.min.js"></script>
+
     <style>
       l-i {
         --size: 1em;
@@ -112,7 +119,6 @@
                   role="tab"
                   aria-controls="home"
                   aria-selected="true">
-                  
                   <l-i name="home" set="mi"></l-i>
                   Home
                 </button>
@@ -169,6 +175,8 @@
                   aria-selected="false">
                   A very long tab
                 </button>
+              </li>
+
               <li class="nav-item" role="presentation">
                 <button
                   class="nav-link"
