--- a/static/modalizer.html
+++ b/static/modalizer.html
@@ -10,14 +10,29 @@
     <meta name="theme-color" content="#111111" media="(prefers-color-scheme: light)" />
     <meta name="theme-color" content="#eeeeee" media="(prefers-color-scheme: dark)" />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/js/bootstrap.bundle.min.js" type="module"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js" type="module"></script>
 
     <link href="./dist/demo.min.css" rel="stylesheet" />
     <link href="./dist/bs-companion.min.css" rel="stylesheet" />
     <script src="./dist/bs-companion.min.js" type="module"></script>
-
+    <script type="module">
+      document.querySelector("#darkmode").addEventListener("click", function (ev) {
+        if (document.documentElement.dataset.bsTheme == "dark") {
+          document.documentElement.dataset.bsTheme = "light";
+        } else {
+          document.documentElement.dataset.bsTheme = "dark";
+        }
+      });
+    </script>
     <script type="module">
       let btn = document.getElementById("open-modal");
       btn.addEventListener("click", (ev) => {
@@ -109,6 +124,8 @@
       <h1>BS Companion</h1>
       <a href="index.html">Back</a>
       <hr />
+      <button id="darkmode">Toggle dark mode</button>
+      <hr />
       <h2>Modalizer</h2>
       <p>Here is a static modal that cannot be dismissed. It has a tri-state button set.</p>
       <button class="btn btn-primary" id="open-modal">Open modal</button>
@@ -135,7 +152,7 @@
               <div class="modal-icon modal-success modal-icon-show"></div>
             </td>
             <td>
-              <button class="show-example-btn btn btn-default" data-icon="success" aria-label="Try me! Example: success modal">Try me!</button>
+              <button class="show-example-btn btn btn-primary" data-icon="success" aria-label="Try me! Example: success modal">Try me!</button>
             </td>
           </tr>
           <tr>
@@ -144,7 +161,7 @@
               <div class="modal-icon modal-error modal-icon-show"></div>
             </td>
             <td>
-              <button class="show-example-btn btn btn-default" data-icon="error" aria-label="Try me! Example: error modal">Try me!</button>
+              <button class="show-example-btn btn btn-primary" data-icon="error" aria-label="Try me! Example: error modal">Try me!</button>
             </td>
           </tr>
           <tr>
@@ -157,7 +174,7 @@
               <div class="modal-icon modal-warning modal-icon-show"></div>
             </td>
             <td>
-              <button class="show-example-btn btn btn-default" data-icon="warning" aria-label="Try me! Example: warning modal">Try me!</button>
+              <button class="show-example-btn btn btn-primary" data-icon="warning" aria-label="Try me! Example: warning modal">Try me!</button>
             </td>
           </tr>
           <tr>
@@ -166,7 +183,7 @@
               <div class="modal-icon modal-info modal-icon-show"></div>
             </td>
             <td>
-              <button class="show-example-btn btn btn-default" data-icon="info" aria-label="Try me! Example: info modal">Try me!</button>
+              <button class="show-example-btn btn btn-primary" data-icon="info" aria-label="Try me! Example: info modal">Try me!</button>
             </td>
           </tr>
           <tr>
@@ -175,7 +192,7 @@
               <div class="modal-icon modal-question modal-icon-show"></div>
             </td>
             <td>
-              <button class="show-example-btn btn btn-default" data-icon="question" aria-label="Try me! Example: question modal">Try me!</button>
+              <button class="show-example-btn btn btn-primary" data-icon="question" aria-label="Try me! Example: question modal">Try me!</button>
             </td>
           </tr>
         </tbody>
