--- a/static/sortable-list.html
+++ b/static/sortable-list.html
@@ -11,13 +11,13 @@
     <meta name="theme-color" content="#eeeeee" media="(prefers-color-scheme: dark)" />
 
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous" />
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js" type="module"></script>
 
@@ -37,20 +37,25 @@
       <hr />
       <h2>Sortable lists</h2>
 
-      <p>Powered by <a href="https://github.com/lekoala/modular-behaviour.js">Modular behaviour</a> and <a href="http://SortableJS.github.io/Sortable/">SortableJS</a></p>
+      <p>
+        Powered by
+        <a href="https://github.com/lekoala/modular-behaviour.js">Modular behaviour</a>
+        and
+        <a href="http://SortableJS.github.io/Sortable/">SortableJS</a>
+      </p>
 
       <modular-behaviour name="Sortable.create" src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/modular/sortable.complete.esm.min.js">
-      <ul id="simpleList" class="list-group">
-        <li class="list-group-item">
-          This is
-          <a href="http://SortableJS.github.io/Sortable/">Sortable</a>
-        </li>
-        <li class="list-group-item">It works with Bootstrap...</li>
-        <li class="list-group-item">...out of the box.</li>
-        <li class="list-group-item">It has support for touch devices.</li>
-        <li class="list-group-item">Just drag some elements around.</li>
-      </ul>
-    </modular-behaviour>
+        <ul id="simpleList" class="list-group">
+          <li class="list-group-item">
+            This is
+            <a href="http://SortableJS.github.io/Sortable/">Sortable</a>
+          </li>
+          <li class="list-group-item">It works with Bootstrap...</li>
+          <li class="list-group-item">...out of the box.</li>
+          <li class="list-group-item">It has support for touch devices.</li>
+          <li class="list-group-item">Just drag some elements around.</li>
+        </ul>
+      </modular-behaviour>
     </div>
   </body>
 </html>
