--- a/static/toaster.html
+++ b/static/toaster.html
@@ -12,8 +12,15 @@
 
     <script type="module" src="https://cdn.jsdelivr.net/npm/last-icon@2/last-icon.js"></script>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/js/bootstrap.bundle.min.js" type="module"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6/dist/jquery.min.js" type="module"></script>
 
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap.native@4.2.0/dist/bootstrap-native.min.js"></script> -->
@@ -129,6 +136,7 @@
       <a href="index.html">Back</a>
       <hr />
       <h2>Toaster</h2>
+      <p>Stacks will animate properly thanks to updated css.</p>
       <button class="btn btn-primary js-toast">Add toast</button>
       <button class="btn btn-primary js-toast-header">Add toast with header and icon</button>
       <button class="btn btn-primary js-toast-no-hide">Add toast (no hide)</button>
