push or replace state

--- a/static/bs-tabs.html
+++ b/static/bs-tabs.html
@@ -207,7 +207,8 @@
       <p>
         Add a
         <code>linkable</code>
-        attribute to make your tabs linkable through anchors.
+        attribute to make your tabs linkable through anchors. By default, linkable tabs replace history. If you expect
+        back/forward button to move in tabs, set <code>linkable="nav"</code>.
       </p>
 
       <p>
